# GameEngine

./: .clang-format  .gitignore  CMakeLists.txt  main.cpp
assets/mesh/: triangle.json
assets/prefabs/: triangle.json
assets/shaders/: color.json  default.json  text.json
assets/textures/fonts/impact/: font_impact_bold.json
engine/components/: ComponentRegistry.h  HUDComponent.h  MaterialComponent.h  OverlayElement.h  OverlayLayer.h  RenderableComponent.h  TextComponent.h  TransformComponent.h
engine/core/: Engine.cpp  Engine.h  EngineCore.h
engine/ecs/: Entity.h  EntityManager.cpp  EntityManager.h
engine/managers/archetype/: Archetype.cpp  Archetype.h  ArchetypeManager.cpp  ArchetypeManager.h
engine/managers/file/: FileManager.cpp  FileManager.h
engine/managers/material/: materialManager.cpp  materialManager.h
engine/managers/mesh/: MeshManager.cpp  MeshManager.h
engine/managers/prefab/: PrefabLoader.cpp  PrefabLoader.h
engine/managers/shader/: ShaderManager.cpp  ShaderManager.h
engine/managers/texture/: TextureManager.cpp  TextureManager.h
engine/managers/time/: TimeManager.cpp  TimeManager.h
engine/managers/window/: WindowManager.cpp  WindowManager.h
engine/systems/interface/text/: TextSystem.cpp  TextSystem.h
engine/systems/interface/text/atlas/: FontAtlas.cpp  FontAtlas.h
engine/systems/interface/text/font/: FontSystem.cpp  FontSystem.h
engine/systems/render/: RenderSystem.cpp  RenderSystem.h
engine/systems/transform/: TransformSystem.cpp  TransformSystem.h  UITransformsystem.h
renderer/: Renderer.cpp  Renderer.h
renderer/mesh/: Mesh.cpp  Mesh.h
renderer/shaders/: Shader.cpp  Shader.h
renderer/shaders/fragment/: fragment_color.glsl  fragment_shader_lighting.gsl  fragment_text.glsl
renderer/shaders/vertex/: vertex_color.glsl  vertex_default.glsl  vertex_shader_lighting.gsl  vertex_text.glsl
renderer/textures/: Texture.cpp  Texture.h
